Resolve the spacing issue in grid divs. Auto size data table columns add colors for warnings. improve colors of the theme to match the site colors.

--- a/ngApp/src/app/app.component.css
+++ b/ngApp/src/app/app.component.css
@@ -31,10 +31,38 @@
   text-align: center;
 }
 
+.goodColumnDataSpan {
+  color: #33cc00;
+}
+
+.warningColumnDataSpan {
+  color: #ff9900;
+}
+
+.alertColumnDataSpan {
+  color: red;
+}
+
+.warningDataRow.ui-datatable-odd {
+  background: #ffcc80 !important;
+}
+
+.warningDataRow.ui-datatable-even {
+  background: #ffebcc !important;
+}
+
+.alertDataRow.ui-datatable-odd {
+  background: #ff9999 !important;
+}
+
+.alertDataRow.ui-datatable-even {
+  background: #ffcccc !important;
+}
+
 header {
   margin-top: 0px;
   position: relative;
-  color: #004d99;
+  color: #001a33;
   padding: 15px;
   margin: 0px 0px 0px 0px;
   height: 75px;
@@ -42,8 +70,24 @@ header {
 }
 
 .title-gradient, .ui-tabview .ui-tabview-nav {
-  background: linear-gradient(to right, #ecf2f9, #c6d9ec, #79a6d2, #79a6d2);
+  background: #79a6d2;
   border-bottom: 1px solid #004d99;
+}
+
+.ui-tabview .ui-tabview-nav > li.ui-state-default {
+  color: #11496f;
+  background: #a6d4f2;
+  border: none;
+}
+
+.ui-tabview .ui-tabview-nav > li.ui-state-default:not(.ui-state-active):not(.ui-state-disabled):hover  {
+  color: #11496f;
+  background: #e9f4fc;
+}
+
+.ui-tabview .ui-tabview-nav > li.ui-state-active {
+  color: #11496f;
+  background: #4da8e6;
 }
 
 .ui-tabview-nav.ui-corner-all {
@@ -84,4 +128,12 @@ body {
 
 .ui-datatable tbody > tr.ui-widget-content.ui-datatable-even {
   background: #edf2f7;
+}
+
+.ui-datatable table {
+  table-layout: auto
+}
+
+.ui-g-1, .ui-g-2, .ui-g-3, .ui-g-4, .ui-g-5, .ui-g-6, .ui-g-7, .ui-g-8, .ui-g-9, .ui-g-10, .ui-g-11, .ui-g-12 {
+  padding: 2px;
 }
